...
					icon='shield-account'
					route='PrivacyDeveloper'
					iconColor='$success'
				/>
				<SettingsNavRow
					testID='settings-nav-about'
					title='About'
					icon='information'
					route='About'
					iconColor='$primary'
				/>

				{/* Sign Out Button */}
...
						size='$4'
						backgroundColor='$danger'
						onPress={() => navigation.navigate('SignOut')}
						icon={<Icon name='logout' color='$background' />}
					>
						<Paragraph color='$background' fontWeight='$6'>
							Sign Out
						</Paragraph>
					</Button>
				</YStack>
			</ScrollView>
		</YStack>
	)
...
