...
				tabBarButtonTestID: 'library-albums-tab-button',
			},
		},
		Tracks: {
			screen: TracksTab,
			options: {
				tabBarButtonTestID: 'library-tracks-tab-button',
			},
		},
		Playlists: {
			screen: PlaylistsTab,
			options: {
				tabBarButtonTestID: 'library-playlists-tab-button',
...
