...
				<Button
					variant='outlined'
					borderColor={'$primary'}
					opacity={!selectedLibraryId ? 0.5 : 1}
					icon={() => <Icon name={primaryButtonIcon} small color='$primary' />}
					onPress={handleLibrarySelection}
					testID='let_s_go_button'
					flex={1}
				>
					<Paragraph color={'$primary'} fontWeight={'$6'}>
						{primaryButtonText}
					</Paragraph>
				</Button>
...
